FEAT: Add .jar executable to be able to run it standalone