@@ -5,19 +5,36 @@ import javax.swing.*;
 import Team.Team;
 
 public class AttackButton extends JLabel {
+    private ImageIcon attaque = null;
+    private java.net.URL imageURL = null;
+    private java.net.URL imageURL2 = null;
+
     public AttackButton(Team playerTeam, int index) {
-        ImageIcon attaque = null;
         try {
-            if (playerTeam.getActivePokemon().getAttaques().get(index).getPp() > 0) {
-                attaque = new ImageIcon(
-                        "../Assets/Bouton/" + playerTeam.getActivePokemon().getType().getDeclaredConstructor()
-                                .newInstance().getName().toLowerCase() + "_attaque.png");
-            } else {
-                attaque = new ImageIcon(
-                        "../Assets/Bouton/noPP_attaque.png");
-            }
+            imageURL = ChooseTeamUI.class.getClassLoader().getResource("Assets/Bouton/" + playerTeam.getActivePokemon()
+                    .getType().getDeclaredConstructor().newInstance().getName().toLowerCase() + "_attaque.png");
         } catch (Exception exception) {
         }
-        setIcon(attaque);
+        try {
+            imageURL2 = ChooseTeamUI.class.getClassLoader().getResource("Assets/Bouton/noPP_attaque.png");
+        } catch (Exception exception) {
+        }
+
+        if (imageURL != null) {
+            try (java.io.InputStream stream = imageURL.openStream()) {
+                if (playerTeam.getActivePokemon().getAttaques().get(index).getPp() > 0) {
+                    attaque = new ImageIcon(javax.imageio.ImageIO.read(stream));
+                } else {
+                    try (java.io.InputStream stream2 = imageURL2.openStream()) {
+                        attaque = new ImageIcon(javax.imageio.ImageIO.read(stream));
+                    } catch (Exception exception2) {
+                    }
+                }
+            } catch (Exception exception) {
+            }
+            setIcon(attaque);
+        } else {
+            System.err.println("Image not found: text_box.png");
+        }
     }
 }
